refactor: improve testing
refactor: improve design